infra/ingress/routes/argo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argowf
  namespace: argo
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames: ["argowf.clokesh.me"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server
          port: 2746
