infra/ingress/routes/tekton-pipelines.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames: ["tekton.clokesh.me"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tekton-dashboard
          port: 9097
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-webhook
  namespace: tekton-pipelines
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames: ["tekton-webhook.clokesh.me"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: el-github-webhook-listener
          port: 8080
