infra/ingress/routes/tools.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlantis
  namespace: tools
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames: ["atlantis.clokesh.me"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atlantis
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost
  namespace: tools
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames: ["opencost.clokesh.me"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opencost
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube
  namespace: tools
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames: ["sonarqube.clokesh.me"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
